apply code fixtures proposed by findbugs